Shopping-lists backend added and Swagger updated
