# server/swagger.yaml
@@ -1,15 +1,61 @@
 openapi: 3.0.0
 info:
-  title: Tasks api
-  description: Tasks CRUD operations
+  title: Tasks and Shopping List API
+  description: Tasks CRUD operations and Shopping List Management
   version: 1.0.0
 servers:
   - url: http://localhost:8080/api
     description: Local development server
+
+components:
+  schemas:
+    Task:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        completed:
+          type: boolean
+      required: -name
+    ShoppingItem:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        quantity:
+          type: integer
+        image:
+          type: string
+        details:
+          type: string
+        required:
+          - name
+    ShoppingList:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        creator:
+          type: string
+        items:
+          type: array
+          items:
+            $ref: "#/components/schemas/ShoppingItem"
+        required:
+          - creator
+
 paths:
   /tasks:
     get:
       summary: Get all tasks
+      tags:
+        - Tasks
       responses:
         "200":
           description: A list of tasks
@@ -17,10 +63,12 @@ paths:
             application/json:
               schema:
                 type: array
-                tasks:
+                items:
                   $ref: "#/components/schemas/Task"
     post:
       summary: Create a new task
+      tags:
+        - Tasks
       requestBody:
         required: true
         content:
@@ -33,6 +81,8 @@ paths:
   /tasks/{id}:
     get:
       summary: Get a task by ID
+      tags:
+        - Tasks
       parameters:
         - name: id
           in: path
@@ -50,6 +100,8 @@ paths:
           description: Task not found
     patch:
       summary: Update a task by ID
+      tags:
+        - Tasks
       parameters:
         - name: id
           in: path
@@ -69,6 +121,8 @@ paths:
           description: Task not found
     delete:
       summary: Delete a task by ID
+      tags:
+        - Tasks
       parameters:
         - name: id
           in: path
@@ -80,18 +134,180 @@ paths:
           description: Task deleted successfully
         "404":
           description: Task not found
-components:
-  schemas:
-    Task:
-      type: object
-      properties:
-        id:
-          type: string
-          example: "1"
-        name:
-          type: string
+  /shopping:
+    get:
+      summary: Get all shopping items
+      tags:
+        - Shopping Items
+      responses:
+        "200":
+          description: A list of shopping items
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  result:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/ShoppingItem"
+    post:
+      summary: Create a new shopping item
+      tags:
+        - Shopping Items
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ShoppingItem"
+      responses:
+        "201":
+          description: Shopping item created successfully
+  /shopping/{id}:
+    get:
+      summary: Get a shopping item by ID
+      tags:
+        - Shopping Items
+      parameters:
+        - name: id
+          in: path
           required: true
-          example: "Sample Task"
-        completed:
-          type: boolean
-          example: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Shopping item found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ShoppingItem"
+        "404":
+          description: Shopping item not found
+    patch:
+      summary: Update a shopping item by ID
+      tags:
+        - Shopping Items
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ShoppingItem"
+      responses:
+        "200":
+          description: Shopping item updated successfully
+        "404":
+          description: Shopping item not found
+    delete:
+      summary: Delete a shopping item by ID
+      tags:
+        - Shopping Items
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Shopping item deleted successfully
+        "404":
+          description: Shopping item not found
+  /shopping-lists:
+    post:
+      summary: Create a new shopping list
+      tags:
+        - Shopping Lists
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ShoppingList"
+      responses:
+        "201":
+          description: Shopping list created successfully
+  /shopping-lists/active:
+    get:
+      summary: Retrieve all active shopping lists
+      tags:
+        - Shopping Lists
+      responses:
+        "200":
+          description: A list of active shopping lists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  result:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/ShoppingList"
+  /shopping-lists/{id}:
+    get:
+      summary: Get a shopping list by ID
+      tags:
+        - Shopping Lists
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Shopping list found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ShoppingList"
+        "404":
+          description: Shopping list not found
+    patch:
+      summary: Update a shopping list by ID
+      tags:
+        - Shopping Lists
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ShoppingList"
+      responses:
+        "200":
+          description: Shopping list updated successfully
+        "404":
+          description: Shopping list not found
+    delete:
+      summary: Delete a shopping list by ID
+      tags:
+        - Shopping Lists
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Shopping list deleted successfully
+        "404":
+          description: Shopping list not found
